--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Барбершоп «Бородинский»</title>
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicon/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
 </head>
 
 <body>
