Adds grid template

--- a/blank.html
+++ b/blank.html
@@ -1,3 +1,7 @@
+<!-- <link rel="icon" href="favicon.ico">
+<link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
+<link rel="apple-touch-icon" href="favicon/180.png">
+<link rel="manifest" href="manifest.webmanifest"> -->
 <!DOCTYPE html>
 <html lang="ru">
 
