Adds decorative elements

--- a/catalog.html
+++ b/catalog.html
@@ -6,8 +6,13 @@
   <title>Барбершоп «Бородинский»</title>
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic&amp;display=swap">
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
+  <link rel="apple-touch-icon" href="favicon/180.png">
+  <link rel="manifest" href="manifest.webmanifest">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style-catalog.css">
+
 </head>
 
 <body class="page-body inner-page">
