--- a/catalog.html
+++ b/catalog.html
@@ -1,83 +1,72 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
-  <title>Барбершоп «Бородинский»</title>
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700&amp;subset=latin,cyrillic&amp;display=swap">
-  <link rel="stylesheet" href="normalize.css">
-  <link rel="stylesheet" href="style-catalog.css">
+  <title>Каталог — Барбершоп «Бородинский»</title>
 </head>
 
-<body class="page-body inner-page">
+<body>
 
-  <header class="main-header">
-    <nav class="main-navigation container">
-      <a class="main-header-logo" href="catalog.html">
+  <header>
+    <nav>
+      <a href="index.html">
         <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
       </a>
-      <ul class="site-navigation">
+      <ul>
         <li><a href="blank.html">Информация</a></li>
         <li><a href="blank.html">Новости</a></li>
         <li><a href="price.html">Прайс-лист</a></li>
-        <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
+        <li><a href="catalog.html">Магазин</a></li>
         <li><a href="blank.html">Контакты</a></li>
       </ul>
-      <div class="user-navigation">
-        <a class="login-link" href="blank.html">Вход</a>
-      </div>
+      <a href="blank.html">Вход</a>
     </nav>
   </header>
 
-  <main class="page-catalog container">
+  <main>
+    <h1>Cредства для ухода</h1>
 
-    <h1 class="page-title">Cредства для ухода</h1>
-
-    <ul class="breadcrumbs">
+    <ul>
       <li>
         <a href="catalog.html">Главная</a>
       </li>
       <li>
         <a href="catalog.html">Магазин</a>
       </li>
-      <li class="breadcrumbs-current">Средства для ухода</li>
+      <li>
+        Средства для ухода
+      </li>
     </ul>
 
-    <section class="filters">
-      <h2 class="visually-hidden">Фильтр товаров</h2>
-      <form class="filter" method="get" action="https://echo.htmlacademy.ru">
+    <section>
+      <h2>Фильтр товаров</h2>
+      <form method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Производители:</legend>
           <ul>
-            <li class="filter-option filter-checkbox">
-              <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox"
-                name="baxter-of-california" id="filter-baxter-of-california" checked>
+            <li>
+              <input type="checkbox" name="baxter-of-california" id="filter-baxter-of-california" checked>
               <label for="filter-baxter-of-california">Baxter of California</label>
             </li>
-            <li class="filter-option filter-checkbox">
-              <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="mr-natty"
-                id="filter-mr-natty">
+            <li>
+              <input type="checkbox" name="mr-natty" id="filter-mr-natty">
               <label for="filter-mr-natty">Mr Natty</label>
             </li>
-            <li class="filter-option filter-checkbox">
-              <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="suavecito"
-                id="filter-suavecito" checked>
+            <li>
+              <input type="checkbox" name="suavecito" id="filter-suavecito" checked>
               <label for="filter-suavecito">Suavecito</label>
             </li>
-            <li class="filter-option filter-checkbox">
-              <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="malin-goetz"
-                id="filter-malin-goetz">
+            <li>
+              <input type="checkbox" name="malin-goetz" id="filter-malin-goetz">
               <label for="filter-malin-goetz">Malin+Goetz</label>
             </li>
-            <li class="filter-option filter-checkbox">
-              <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="murrays"
-                id="filter-murrays">
+            <li>
+              <input type="checkbox" name="murrays" id="filter-murrays">
               <label for="filter-murrays">Murray’s</label>
             </li>
-            <li class="filter-option filter-checkbox">
-              <input class="visually-hidden filter-input-checkbox filter-input" type="checkbox" name="american-crew"
-                id="filter-american-crew" checked>
+            <li>
+              <input type="checkbox" name="american-crew" id="filter-american-crew" checked>
               <label for="filter-american-crew">American Crew</label>
             </li>
           </ul>
@@ -85,191 +74,170 @@
         <fieldset>
           <legend>Группы товаров:</legend>
           <ul>
-            <li class="filter-option filter-radio">
-              <input class="visually-hidden filter-input-radio filter-input" type="radio" name="product-group"
-                value="shaving" id="filter-shave">
+            <li>
+              <input type="radio" name="product-group" value="shaving" id="filter-shave">
               <label for="filter-shave">Бритвенные принадлежности</label>
             </li>
-            <li class="filter-option filter-radio">
-              <input class="visually-hidden filter-input-radio filter-input" type="radio" name="product-group"
-                value="hair-care" id="filter-care" checked>
+            <li>
+              <input type="radio" name="product-group" value="hair-care" id="filter-care" checked>
               <label for="filter-care">Средства для ухода</label>
             </li>
-            <li class="filter-option filter-radio">
-              <input class="visually-hidden filter-input-radio filter-input" type="radio" name="product-group"
-                value="accessories" id="filter-accessories">
+            <li>
+              <input type="radio" name="product-group" value="accessories" id="filter-accessories">
               <label for="filter-accessories">Аксессуары</label>
             </li>
           </ul>
         </fieldset>
-        <button type="submit" class="filter-button button">Показать</button>
+        <button type="submit">Показать</button>
       </form>
     </section>
 
-    <section class="catalog">
-      <h2 class="visually-hidden">Список средств для ухода</h2>
-      <ul class="catalog-list">
-        <li class="catalog-item">
+    <section>
+      <h2>Список средств для ухода</h2>
+      <ul>
+        <li>
           <a href="product.html">
-            <h3>
-              <span class="catalog-category">Набор для путешествий</span>
-              <span class="catalog-item-title">«Baxter of California»</span>
-            </h3>
-            <p class="catalog-item-image">
+            <h3>Набор для путешествий «Baxter of California»</h3>
+            <p>
               <img src="img/product-1.jpg" width="220" height="165" alt="Набор для путешествий «Baxter of California»">
             </p>
           </a>
-          <p class="catalog-item-price">
-            <b>2 900 ₽</b>
-            <button class="button" type="button">Купить</button>
+          <p>
+            2 900 ₽
+            <button type="button">Купить</button>
           </p>
         </li>
-        <li class="catalog-item">
+        <li>
           <a href="product.html">
-            <h3>
-              <span class="catalog-category">Увлажняющий кондиционер</span>
-              <span class="catalog-item-title">«Baxter of California»</span>
-            </h3>
-            <p class="catalog-item-image">
+            <h3>Увлажняющий кондиционер «Baxter of California»</h3>
+            <p>
               <img src="img/product-2.jpg" width="220" height="165"
                 alt="Увлажняющий кондиционер «Baxter of California»">
             </p>
           </a>
-          <p class="catalog-item-price">
-            <b>750 ₽</b>
-            <button class="button" type="button">Купить</button>
+          <p>
+            750 ₽
+            <button type="button">Купить</button>
           </p>
         </li>
-        <li class="catalog-item">
+        <li>
           <a href="product.html">
-            <h3>
-              <span class="catalog-category">Гель для волос</span>
-              <span class="catalog-item-title">«Suavecito»</span>
-            </h3>
-            <p class="catalog-item-image">
+            <h3>Гель для волос «Suavecito»</h3>
+            <p>
               <img src="img/product-3.jpg" width="220" height="165" alt="Гель для волос «Suavecito»">
             </p>
           </a>
-          <p class="catalog-item-price">
-            <b>290 ₽</b>
-            <button class="button" type="button">Купить</button>
+          <p>
+            290 ₽
+            <button type="button">Купить</button>
           </p>
         </li>
-        <li class="catalog-item">
+        <li>
           <a href="product.html">
-            <h3>
-              <span class="catalog-category">Глина для укладки волос</span>
-              <span class="catalog-item-title">«American crew»</span>
-            </h3>
-            <p class="catalog-item-image">
+            <h3>Глина для укладки волос «American crew»</h3>
+            <p>
               <img src="img/product-4.jpg" width="220" height="165" alt="Глина для укладки волос «American crew»">
             </p>
           </a>
-          <p class="catalog-item-price">
-            <b>500 ₽</b>
-            <button class="button" type="button">Купить</button>
+          <p>
+            500 ₽
+            <button type="button">Купить</button>
           </p>
         </li>
-        <li class="catalog-item">
+        <li>
           <a href="product.html">
-            <h3>
-              <span class="catalog-category">Гель для волос</span>
-              <span class="catalog-item-title">«American crew»</span>
-            </h3>
-            <p class="catalog-item-image">
+            <h3>Гель для волос «American crew»</h3>
+            <p>
               <img src="img/product-5.jpg" width="220" height="165" alt="Гель для волос «American crew»">
             </p>
           </a>
-          <p class="catalog-item-price">
-            <b>300 ₽</b>
-            <button class="button" type="button">Купить</button>
+          <p>
+            300 ₽
+            <button type="button">Купить</button>
           </p>
         </li>
-        <li class="catalog-item">
+        <li>
           <a href="product.html">
-            <h3>
-              <span class="catalog-category">Набор для бритья</span>
-              <span class="catalog-item-title">«Baxter of California»</span>
-            </h3>
-            <p class="catalog-item-image">
+            <h3>Набор для бритья «Baxter of California»</h3>
+            <p>
               <img src="img/product-6.jpg" width="220" height="165" alt="Набор для бритья «Baxter of California»">
             </p>
           </a>
-          <p class="catalog-item-price">
-            <b>3 900 ₽</b>
-            <button class="button" type="button">Купить</button>
+          <p>
+            3 900 ₽
+            <button type="button">Купить</button>
           </p>
         </li>
       </ul>
-      <ul class="pagination-list">
-        <li class="pagination-item"><a href="#">1</a></li>
-        <li class="pagination-item pagination-item-current"><a>2</a></li>
-        <li class="pagination-item"><a href="#">3</a></li>
-        <li class="pagination-item"><a href="#">4</a></li>
+      <ul>
+        <li>
+          <a href="#">1</a>
+        </li>
+        <li>
+          <a>2</a>
+        </li>
+        <li>
+          <a href="#">3</a>
+        </li>
+        <li>
+          <a href="#">4</a>
+        </li>
       </ul>
     </section>
   </main>
 
-  <footer class="main-footer">
-    <div class="container">
-      <section class="footer-contacts">
-        <h2 class="visually-hidden">Как нас найти</h2>
-        <p>
-          Барбершоп «Бородинский»<br>
-          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a class="footer-address" href="blank.html">Как нас найти?</a><br>
-          Телефон: <a class="footer-phone" href="tel:+78126660266">+7 (812) 666-02-66</a>
-        </p>
-      </section>
-      <section class="footer-social">
-        <h2>Давайте дружить!</h2>
-        <ul>
-          <li>
-            <a class="social-button" href="#">
-              Вконтакте
-            </a>
-          </li>
-          <li>
-            <a class="social-button" href="#">
-              Фейсбук
-            </a>
-          </li>
-          <li>
-            <a class="social-button" href="#">
-              Инстаграм
-            </a>
-          </li>
-        </ul>
-      </section>
-      <p class="footer-copyright">
-        <b>Разработано:</b> <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
+  <footer>
+    <section>
+      <h2>Как нас найти</h2>
+      <p>
+        Барбершоп «Бородинский»<br>
+        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+        <a href="blank.html">Как нас найти?</a><br>
+        Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a>
       </p>
-    </div>
+    </section>
+    <section>
+      <h2>Давайте дружить!</h2>
+      <ul>
+        <li>
+          <a href="#">Вконтакте</a>
+        </li>
+        <li>
+          <a href="#">Фейсбук</a>
+        </li>
+        <li>
+          <a href="#">Инстаграм</a>
+        </li>
+      </ul>
+    </section>
+    <p>
+      Разработано:
+      <a href="https://htmlacademy.ru">HTML Academy</a>
+    </p>
   </footer>
 
-  <section class="modal modal-login">
+  <section>
     <h2>Личный кабинет</h2>
-    <p class="modal-description">Введите пожалуйста свой логин и пароль</p>
-    <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
+    <p>Введите пожалуйста свой логин и пароль</p>
+    <form action="https://echo.htmlacademy.ru" method="post">
       <p>
-        <label class="visually-hidden" for="login-login">Логин</label>
-        <input class="login-icon-user" id="login-login" type="email" name="login" placeholder="email@example.com">
+        <label for="login-login">Логин</label>
+        <input id="login-login" type="email" name="login" placeholder="email@example.com">
       </p>
       <p>
-        <label class="visually-hidden" for="login-password">Пароль</label>
-        <input class="login-icon-password" id="login-password" type="password" name="password" placeholder="••••••••">
+        <label for="login-password">Пароль</label>
+        <input id="login-password" type="password" name="password" placeholder="••••••••">
       </p>
-      <p class="login-help">
-        <label class="login-checkbox">
-          <input class="visually-hidden" type="checkbox" name="remember">
-          <span class="checkbox-indicator"></span>
+      <p>
+        <label>
+          <input type="checkbox" name="remember">
           Запомните меня
         </label>
-        <a class="restore" href="#">Я забыл пароль!</a>
+        <a href="#">Я забыл пароль!</a>
       </p>
-      <button class="button" type="submit">Войти</button>
+      <button type="submit">Войти</button>
     </form>
-    <button class="modal-close" type="button">Закрыть</button>
+    <button type="button">Закрыть</button>
   </section>
 
 </body>
