--- a/blank.html
+++ b/blank.html
@@ -1,9 +1,13 @@
 <!-- <link rel="icon" href="favicon.ico">
 <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
 <link rel="apple-touch-icon" href="favicon/180.png">
-<link rel="manifest" href="manifest.webmanifest"> -->
+<link rel="manifest" href="manifest.webmanifest"> 
+Стилия для обводки блоков
+outline: 5px solid rgba(255, 0, 0, 0.3);
+outline-offset: -5px;
+-->
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -12,86 +16,85 @@
   <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
   <link rel="apple-touch-icon" href="favicon/180.png">
   <link rel="manifest" href="manifest.webmanifest">
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="page-body inner-page">
 
-  <header>
-    <nav>
-      <a href="index.html">
+  <header class="main-header">
+    <nav class="main-navigation container">
+      <a class="main-header-logo" href="index.html">
         <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
       </a>
-      <ul>
+      <ul class="site-navigation">
         <li><a href="blank.html">Информация</a></li>
         <li><a href="blank.html">Новости</a></li>
         <li><a href="price.html">Прайс-лист</a></li>
-        <li><a href="catalog.html">Магазин</a></li>
+        <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
         <li><a href="blank.html">Контакты</a></li>
       </ul>
-      <a href="blank.html">Вход</a>
+      <div class="user-navigation">
+        <a class="login-link" href="login.html">Вход</a>
+      </div>
     </nav>
   </header>
 
   <main>
     <h1>Blank page</h1>
-
-    </section>
   </main>
 
-  <footer>
-    <section>
-      <h2>Как нас найти</h2>
-      <p>
-        Барбершоп «Бородинский»<br>
-        Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-        <a href="blank.html">Как нас найти?</a><br>
-        Телефон: <a href="tel:+78126660266">+7 (812) 666-02-66</a>
+  <footer class="main-footer">
+    <div class="container">
+      <section class="footer-contacts">
+        <h2>Как нас найти</h2>
+        <p>
+          Барбершоп «Бородинский»<br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          <a class="footer-address" href="blank.html">Как нас найти?</a><br>
+          Телефон: <a class="footer-phone" href="tel:+78126660266">+7 (812) 666-02-66</a>
+        </p>
+      </section>
+      <section class="footer-social">
+        <h2>Давайте дружить!</h2>
+        <ul>
+          <li>
+            <a class="social-button" href="#">
+              <span>Вконтакте</span>
+              <svg width="27" height="16" viewBox="0 0 128 76">
+                <path
+                  d="M125,5.15c.89-3,0-5.15-4.23-5.15h-14a6,6,0,0,0-6.09,4S93.59,21.31,83.5,32.59c-3.26,3.26-4.74,4.3-6.52,4.3-.89,0-2.18-1-2.18-4V5.15c0-3.56-1-5.15-4-5.15h-22a3.37,3.37,0,0,0-3.56,3.22c0,3.37,5,4.15,5.56,13.64V37.48c0,4.52-.82,5.34-2.6,5.34-4.74,0-16.29-17.43-23.13-37.38C23.72,1.57,22.38,0,18.8,0H4.8C.8,0,0,1.88,0,4c0,3.71,4.75,22.1,22.1,46.42C33.67,67,50,76,64.8,76c8.9,0,10-2,10-5.45V58c0-4,.84-4.8,3.66-4.8,2.08,0,5.64,1,13.94,9C101.9,71.74,103.46,76,108.8,76h14c4,0,6-2,4.85-6s-5.8-9.64-11.81-16.4c-3.27-3.86-8.16-8-9.64-10.09-2.08-2.67-1.49-3.86,0-6.23,0,0,17-24,18.83-32.18Z"
+                  fill="#fff" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="#">
+              <span>Фейсбук</span>
+              <svg width="19" height="22" viewBox="0 0 10.15 21.74">
+                <path
+                  d="M3.34 1.12A4.77 4.77 0 0 1 6.53 0h3.61v3.81H7.81a1.07 1.07 0 0 0-1.09.83v2.55h3.42c-.08 1.23-.24 2.45-.41 3.67h-3v10.87H2.21V10.86H0V7.21h2.19V3.66a3.83 3.83 0 0 1 1.15-2.54z"
+                  fill="#fff" />
+              </svg>
+            </a>
+          </li>
+          <li>
+            <a class="social-button" href="#">
+              <span>Инстаграм</span>
+              <svg width="20" height="20" viewBox="0 0 20 20">
+                <path
+                  d="M18 0H2a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h16a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm-8 6a4 4 0 1 1-4 4 4 4 0 0 1 4-4zM2.5 18a.47.47 0 0 1-.5-.5V9h2.1a3.4 3.4 0 0 0-.1 1 6 6 0 1 0 12 0 3.4 3.4 0 0 0-.1-1H18v8.5a.47.47 0 0 1-.5.5zM18 4.5a.47.47 0 0 1-.5.5h-2a.47.47 0 0 1-.5-.5v-2a.47.47 0 0 1 .5-.5h2a.47.47 0 0 1 .5.5z"
+                  fill="#fff" />
+              </svg>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <p class="footer-copyright">
+        <b>Разработано:</b> <a class="button" href="https://htmlacademy.ru">HTML Academy</a>
       </p>
-    </section>
-    <section>
-      <h2>Давайте дружить!</h2>
-      <ul>
-        <li>
-          <a href="#">Вконтакте</a>
-        </li>
-        <li>
-          <a href="#">Фейсбук</a>
-        </li>
-        <li>
-          <a href="#">Инстаграм</a>
-        </li>
-      </ul>
-    </section>
-    <p>
-      Разработано:
-      <a href="https://htmlacademy.ru">HTML Academy</a>
-    </p>
+    </div>
   </footer>
-
-  <section>
-    <h2>Личный кабинет</h2>
-    <p>Введите пожалуйста свой логин и пароль</p>
-    <form action="https://echo.htmlacademy.ru" method="post">
-      <p>
-        <label for="login-login">Логин</label>
-        <input id="login-login" type="email" name="login" placeholder="email@example.com">
-      </p>
-      <p>
-        <label for="login-password">Пароль</label>
-        <input id="login-password" type="password" name="password" placeholder="••••••••">
-      </p>
-      <p>
-        <label>
-          <input type="checkbox" name="remember">
-          Запомните меня
-        </label>
-        <a href="#">Я забыл пароль!</a>
-      </p>
-      <button type="submit">Войти</button>
-    </form>
-    <button type="button">Закрыть</button>
-  </section>
-
 </body>
 
 </html>
