--- a/catalog.html
+++ b/catalog.html
@@ -13,23 +13,19 @@
 <body class="page-body inner-page">
 
   <header class="main-header">
-    <nav class="main-navigation">
-      <div class="main-header-bar">
-        <div class="main-navigation-wrapper">
-          <a class="main-header-logo" href="index.html">
-            <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
-          </a>
-          <ul class="site-navigation">
-            <li><a href="blank.html">Информация</a></li>
-            <li><a href="blank.html">Новости</a></li>
-            <li><a href="price.html">Прайс-лист</a></li>
-            <li><a href="catalog.html">Магазин</a></li>
-            <li><a href="blank.html">Контакты</a></li>
-          </ul>
-          <div class="user-navigation">
-            <a class="login-link" href="login.html">Вход</a>
-          </div>
-        </div>
+    <nav class="main-navigation container">
+      <a class="main-header-logo" href="catalog.html">
+        <img src="img/logo.svg" width="111" height="24" alt="Логотип барбершопа «Бородинский»">
+      </a>
+      <ul class="site-navigation">
+        <li><a href="blank.html">Информация</a></li>
+        <li><a href="blank.html">Новости</a></li>
+        <li><a href="price.html">Прайс-лист</a></li>
+        <li class="site-navigation-current"><a href="catalog.html">Магазин</a></li>
+        <li><a href="blank.html">Контакты</a></li>
+      </ul>
+      <div class="user-navigation">
+        <a class="login-link" href="blank.html">Вход</a>
       </div>
     </nav>
   </header>
@@ -40,7 +36,7 @@
 
     <ul class="breadcrumbs">
       <li>
-        <a href="index.html">Главная</a>
+        <a href="catalog.html">Главная</a>
       </li>
       <li>
         <a href="catalog.html">Магазин</a>
@@ -49,7 +45,7 @@
     </ul>
 
     <section class="filters">
-      <h2>Фильтр товаров</h2>
+      <h2 class="visually-hidden">Фильтр товаров</h2>
       <form class="filter" method="get" action="https://echo.htmlacademy.ru">
         <fieldset>
           <legend>Производители:</legend>
@@ -111,7 +107,7 @@
     </section>
 
     <section class="catalog">
-      <h2>Список средств для ухода</h2>
+      <h2 class="visually-hidden">Список средств для ухода</h2>
       <ul class="catalog-list">
         <li class="catalog-item">
           <a href="product.html">
@@ -214,15 +210,15 @@
     </section>
   </main>
 
-  <footer class="page-footer main-footer">
+  <footer class="main-footer">
     <div class="container">
       <section class="footer-contacts">
-        <h2>Как нас найти</h2>
+        <h2 class="visually-hidden">Как нас найти</h2>
         <p>
           Барбершоп «Бородинский»<br>
           Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-          <a href="blank.html">Как нас найти?</a><br>
-          Телефон: +7 (812) 666-02-66
+          <a class="footer-address" href="blank.html">Как нас найти?</a><br>
+          Телефон: <a class="footer-phone" href="tel:+78126660266">+7 (812) 666-02-66</a>
         </p>
       </section>
       <section class="footer-social">
@@ -251,21 +247,21 @@
     </div>
   </footer>
 
-  <section class="modal">
+  <section class="modal modal-login">
     <h2>Личный кабинет</h2>
-    <p>Введите пожалуйста свой логин и пароль</p>
+    <p class="modal-description">Введите пожалуйста свой логин и пароль</p>
     <form class="login-form" action="https://echo.htmlacademy.ru" method="post">
       <p>
-        <label for="login-login">Логин</label>
+        <label class="visually-hidden" for="login-login">Логин</label>
         <input class="login-icon-user" id="login-login" type="email" name="login" placeholder="email@example.com">
       </p>
       <p>
-        <label for="login-password">Пароль</label>
+        <label class="visually-hidden" for="login-password">Пароль</label>
         <input class="login-icon-password" id="login-password" type="password" name="password" placeholder="••••••••">
       </p>
       <p class="login-help">
         <label class="login-checkbox">
-          <input type="checkbox" name="remember">
+          <input class="visually-hidden" type="checkbox" name="remember">
           <span class="checkbox-indicator"></span>
           Запомните меня
         </label>
@@ -273,7 +269,7 @@
       </p>
       <button class="button" type="submit">Войти</button>
     </form>
-    <button type="button">Закрыть</button>
+    <button class="modal-close" type="button">Закрыть</button>
   </section>
 
 </body>
