--- a/filter.html
+++ b/filter.html
@@ -3,9 +3,9 @@
 
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Filter</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,500,700;display=swap">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style-filter.css">
 </head>
 
 <body>
@@ -15,10 +15,17 @@
       <div class="range-filter">
         <div class="range-controls">
           <div class="scale">
-            <div class="bar"></div>
+            <div class="bar" style="
+                width: 30%;
+                margin-left: 20%
+              "></div>
           </div>
-          <div class="toggle toggle-min"></div>
-          <div class="toggle toggle-max"></div>
+          <div class="toggle toggle-min" tabindex="0" style="
+              left: 20%
+            "></div>
+          <div class="toggle toggle-max" tabindex="0" style="
+              left: 50%
+            "></div>
         </div>
         <div class="price-controls">
           <label class="min-price">
